changed nginx configs

--- a/nginx/static/index.html
+++ b/nginx/static/index.html
@@ -116,8 +116,8 @@
             <label for="service">Select Service:</label>
             <select id="service" onchange="loadDocs()">
                 <option value="">Select a service</option>
-                <option value="/api/catalogs/openapi.json">Catalog Service</option>
-                <option value="/api/accounts/openapi.json">Accounts Service</option>
+                <option value="/catalogs/openapi.json">Catalog Service</option>
+                <option value="/accounts/openapi.json">Accounts Service</option>
             </select>
         </div>
 
